k8s/apps/overlays/development/patches/traefik-dashboard-values.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-ingress
spec:
  routes:
    - match: Host(`traefik.dev`)
      kind: Rule
      services:
        - name: api@internal
          namespace: traefik-ingress
          kind: TraefikService
